[tool.poetry]
name = "file-intro-plugin"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "file_intro_plugin"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
